--- a/index.html
+++ b/index.html
@@ -81,3 +81,10 @@ $ git checkout gh-pages
   
   </body>
 </html>
+
+<script
+src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-
+AMS-MML_HTMLorMML">  
+</script>
+
+$$\mu _{k}=\frac{ki}{1}, k=1,2,..., и соответственно, собственных значений и собственных ф-ций: \lambda _{k}=-(\frac{ki}{1})^2, X_{k}=\sin \frac{kix}{1},$$
